kubernetes/applications/apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      securityContext:
        fsGroup: 3000
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:v2.49.0
        ports:
        - name: http
          containerPort: 80
        securityContext:
          runAsUser: 3000
          runAsGroup: 3000
        volumeMounts:
        - name: filebrowser-config-file
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /srv/downloads
        - name: tv
          mountPath: /srv/tv
        - name: movies
          mountPath: /srv/movies
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: filebrowser-config-file
        configMap:
          name: filebrowser-config
      - name: config
        persistentVolumeClaim:
          claimName: filebrowser-config
      - name: downloads
        nfs:
          server: 10.20.0.100
          path: /mnt/Taranaki/Tarriance/hopuhopu_katoa
      - name: tv
        nfs:
          server: 10.20.0.100
          path: /mnt/Tongariro/Plexopathy/Television
      - name: movies
        nfs:
          server: 10.20.0.100
          path: /mnt/Tongariro/Plexopathy/Film
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: apps
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: filebrowser
